# GPU-Playground

./: LICENSE  README.md
CUDA/: CMakeLists.txt
CUDA/CmnUtils/CudaRuntime/: CheckError.hpp  tcCudaBuffer.hpp  tcCudaStream.hpp
CUDA/CmnUtils/CufftPlans/: CMakeLists.txt
CUDA/CmnUtils/CufftPlans/inc/: tcFftPlan1d.hpp  tcFftPlanBase.hpp  teFftPlanType.hpp
CUDA/CmnUtils/CufftPlans/src/: tcFftPlan1d.cpp  tcFftPlanBase.cpp
CUDA/CmnUtils/SetupAndVerify/: Random.hpp
CUDA/CmnUtils/Utils/: Hash.hpp  VerifyResults.hpp
CUDA/SimpleFma/: CMakeLists.txt  SimpleFma.cu
